Improve Wall of Fame layout and styling

--- a/walloffame.html
+++ b/walloffame.html
@@ -179,6 +179,7 @@
                                             <div class="carousel-item active wall-of-fame-carousel-image">
                                                 <img src="assets/img/achievers/gayathri.jpeg" class="d-block img-fluid"
                                                     alt="Saikumar J"
+                                                    loading="lazy"
                                                     style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                                             </div>
                                         </div>
@@ -221,6 +222,7 @@
                                             <div class="carousel-item active wall-of-fame-carousel-image">
                                                 <img src="assets/img/achievers/shabeshvaran.jpeg" class="d-block img-fluid"
                                                     alt="Saikumar J"
+                                                    loading="lazy"
                                                     style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                                             </div>
                                         </div>
@@ -264,6 +266,7 @@
                                         <div class="carousel-item active wall-of-fame-carousel-image">
                                             <img src="assets/img/achievers/saikumar.jpg" class="d-block img-fluid"
                                                 alt="Saikumar J"
+                                                loading="lazy"
                                                 style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                                         </div>
                                     </div>
@@ -307,6 +310,7 @@
                                       <div class="carousel-item active wall-of-fame-carousel-image">
                                           <img src="assets/img/achievers/monish.jpg" class="d-block img-fluid" 
                                                alt="Monish B" 
+                                               loading="lazy"
                                                style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                                       </div>
                                   </div>
@@ -348,6 +352,7 @@
                                <div class="carousel-item active wall-of-fame-carousel-image">
                             <img src="assets/img/achievers/bharath.jpg" class="d-block img-fluid" 
                             alt="Nikhitha- Winner of Monthly Contests" 
+                            loading="lazy"
                             style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                           </div>
                         </div>
@@ -386,6 +391,7 @@
                                <div class="carousel-item active wall-of-fame-carousel-image">
                             <img src="assets/img/achievers/rahul.jpg" class="d-block img-fluid" 
                             alt="Nikhitha- Winner of Monthly Contests" 
+                            loading="lazy"
                             style="max-height: 230px; object-fit: contain; width:400px; margin-bottom: -40px;">
                           </div>
                         </div>
@@ -426,6 +432,7 @@
                                     <div class="carousel-item active wall-of-fame-carousel-image">
                                         <img src="assets/img/achievers/uvashree.jpg" class="d-block img-fluid"
                                             alt="Uvashree S"
+                                            loading="lazy"
                                             style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                                     </div>
                                 </div>
@@ -469,6 +476,7 @@
                                     <div class="carousel-item active wall-of-fame-carousel-image">
                                         <img src="assets/img/achievers/allen.png" class="d-block img-fluid"
                                             alt="Allen Roddick A"
+                                            loading="lazy"
                                             style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                                     </div>
                                 </div>
@@ -515,8 +523,11 @@
                         style="width: 100%; display: flex; justify-content: center;">
                        <div class="carousel-inner" style="width: 100%; text-align: center;">
                            <div class="carousel-item active wall-of-fame-carousel-image"> 
-                          <img src="assets/img/achievers/lakshmi_priya_2.jpeg" class="d-block img-fluid" 
-                          alt="Lakshmi Priya A" style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
+                          <img src="assets/img/achievers/lakshmi_priya_2.jpeg" 
+                          class="d-block img-fluid" 
+                          alt="Lakshmi Priya A" 
+                          loading="lazy"
+                          style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                           </div>
                           </div>
                         </div>
@@ -552,6 +563,7 @@
                            <div class="carousel-item active wall-of-fame-carousel-image">                       
                           <img src="assets/img/achievers/johith.jpg"class="d-block img-fluid" 
                           alt="Monish B" 
+                          loading="lazy"
                           style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                         </div>
                       </div>
@@ -588,6 +600,7 @@
                            <div class="carousel-item active wall-of-fame-carousel-image">
                           <img src="assets/img/achievers/kum.jpg"class="d-block img-fluid" 
                           alt="Kumar K" 
+                          loading="lazy"
                           style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">             
                       </div>
                     </div>
@@ -625,6 +638,7 @@
                              <div class="carousel-item active wall-of-fame-carousel-image">
                           <img src="assets/img/achievers/nikitha.jpg" class="d-block img-fluid" 
                           alt="Nikhitha- Winner of Monthly Contests" 
+                          loading="lazy"
                           style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                         </div>
                       </div>
@@ -665,6 +679,7 @@
                              <div class="carousel-item active wall-of-fame-carousel-image">
                           <img src="assets/img/achievers/atc.jpg"  class="d-block img-fluid" 
                           alt="Atchaiyaraj S- Pec Code Quest Winner" 
+                          loading="lazy"
                           style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                  </div>
              </div>
@@ -702,6 +717,7 @@
                              <div class="carousel-item active wall-of-fame-carousel-image">
                           <img src="assets/img/achievers/ac.jpg" class="d-block img-fluid" 
                           alt="Adrian Calvin K.A- Winner of PEC Code Quest" 
+                          loading="lazy"
                           style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                         </div>
                       </div>
@@ -740,6 +756,7 @@
                              <div class="carousel-item active wall-of-fame-carousel-image">
                           <img src="assets/img/achievers/Rhymond.jpeg"  class="d-block img-fluid" 
                           alt="Jeswin Rhymond- Winner of King Python" 
+                          loading="lazy"
                           style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                  </div>
              </div>
@@ -775,7 +792,9 @@
                           style="width: 100%; display: flex; justify-content: center;">
                          <div class="carousel-inner" style="width: 100%; text-align: center;">
                              <div class="carousel-item active wall-of-fame-carousel-image">
-                          <img src="assets/img/achievers/Mohana.jpeg"  class="d-block img-fluid"  alt="Mohana Priya S.R - #include <craze.c> Winner" style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
+                          <img src="assets/img/achievers/Mohana.jpeg"  class="d-block img-fluid"  alt="Mohana Priya S.R - #include <craze.c> Winner" 
+                            loading="lazy"
+                            style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                           </div>
                       </div>
                   </div>>
@@ -812,7 +831,9 @@
                              <div class="carousel-item active wall-of-fame-carousel-image">                      
                                               
                         <img src="assets/img/achievers/Maria.jpeg" class="d-block img-fluid"  
-                              alt="Maria Robin Andrew - #HashKing Winner" style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
+                              alt="Maria Robin Andrew - #HashKing Winner" 
+                              loading="lazy"
+                              style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                             </div>
                         </div>
                     </div>
@@ -848,7 +869,9 @@
                          <div class="carousel-inner" style="width: 100%; text-align: center;">
                              <div class="carousel-item active wall-of-fame-carousel-image">
                           <img src="assets/img/achievers/elevarasar.jpeg" class="d-block img-fluid" 
-                              alt="Elavarasar P - Winner of July Monthly Contest 2023" style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
+                              alt="Elavarasar P - Winner of July Monthly Contest 2023" 
+                              loading="lazy"
+                              style="max-height: 300px; object-fit: contain; width:190px; margin-bottom: -40px;">
                       </div>
                     </div>
                   </div>
@@ -975,6 +998,26 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <script src="assets/js/main.js"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const cards = document.querySelectorAll('.premium-card');
+
+    cards.forEach(card => {
+      const img = card.querySelector('img');
+      const reveal = () => card.classList.add('is-loaded');
+
+      if (img && img.complete) {
+        reveal();
+      } else if (img) {
+        img.addEventListener('load', reveal);
+        img.addEventListener('error', reveal);
+      } else {
+        reveal();
+      }
+    });
+  });
+</script>
+
 
 </body>
 
